[package]
name = "infrared-examples"
version = "0.8.0"
authors = ["Johan Kristell <johan@jott.se>"]
publish = false
edition = "2018"

[dependencies]
panic-halt = "0.2.0"
infrared =  "0.11"
avr-device = "0.3"
nb = "0.1.2"
ufmt = "0.1.0"

[dependencies.arduino-uno]
git = "https://github.com/rahix/avr-hal"
# rev = "<insert latest git-commit hash here>"

# Configure the build for minimal size
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"


[patch.crates-io]
infrared = { git = "https://github.com/jkristell/infrared", branch="next" }
