[package]
name = "infrared-examples"
version = "0.8.0"
authors = ["Johan Kristell <johan@jott.se>"]
publish = false
edition = "2018"

[dependencies]
panic-halt = "0.2.0"
infrared =  "0.11"
avr-device = "0.3"
nb = "0.1.2"
ufmt = "0.1.0"

[dependencies.arduino-uno]
git = "https://github.com/rahix/avr-hal"
rev = "b1aedf824fcb59078f8022d4464b2835ae4bd83a"

# Configure the build for minimal size
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

[patch.crates-io]
ufmt = { git = "https://github.com/Rahix/ufmt.git", rev = "12225dc1678e42fecb0e8635bf80f501e24817d9" }
infrared = { git = "https://github.com/jkristell/infrared", branch="avr" }
